# flutter_rust_app

./: LICENSE  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/frb_example/: MainActivity.kt
integration_test/: main.dart
ios/Runner/: Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_generated.dart  main.dart  map.dart  off_topic_code.dart
linux/: CMakeLists.txt  rust.cmake
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/flutter_rust_bridge_example.xcodeproj/: project.pbxproj
rust/flutter_rust_bridge_example.xcodeproj/xcuserdata/vdinh.xcuserdatad/xcschemes/: xcschememanagement.plist
rust/src/: api.rs  bridge_generated.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt  rust.cmake  rust.require.cmake
windows/runner/: Runner.rc
