[package]
name = "flutter_rust_app"
version = "0.1.0"
edition = "2018"

[lib]
name = "flutter_rust_app"
crate-type = ["cdylib"]

[dependencies]
flutter_rust_bridge = { path = "../frb/frb_rust" }
anyhow = { version = "1", features = ["backtrace"] }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util"] }
serde_json = "1"
geojson = "0.23"
